# backend/openapi/horse-api.json
@@ -7490,13 +7490,32 @@
         "type": "object",
         "properties": {
           "type": {
-            "type": "string"
+            "type": "string",
+            "minLength": 1
           },
           "totalCount": {
             "type": "integer",
-            "format": "int32"
+            "format": "int32",
+            "minimum": 1
+          },
+          "usedCount": {
+            "type": "integer",
+            "format": "int32",
+            "minimum": 0
+          },
+          "firstUsedDate": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "format": "date"
           }
-        }
+        },
+        "required": [
+          "totalCount",
+          "type",
+          "usedCount"
+        ]
       },
       "CouponResponse": {
         "type": "object",
